feature (all): скорректирована структура и конфигурация maven